cmake_minimum_required(VERSION 3.15)
project(Cplusplus)

set(CMAKE_CXX_STANDARD 14)
add_executable(_01_knapsack01_main _01_knapsack01/_01_knapsack01_main.cpp)
add_executable(_01_knapsack01_main2 _01_knapsack01/_01_knapsack01_main2.cpp)
add_executable(_01_knapsack01_main3 _01_knapsack01/_01_knapsack01_main3.cpp)
add_executable(_02_knapsackcomplete_main _02_knapsackcomplete/_02_knapsackcomplete_main.cpp)
add_executable(_02_knapsackcomplete_main2 _02_knapsackcomplete/_02_knapsackcomplete_main2.cpp)
add_executable(_02_knapsackcomplete_main3 _02_knapsackcomplete/_02_knapsackcomplete_main3.cpp)
add_executable(_03_knapsackmulti_1_main _03_knapsackmulti_1/_03_knapsackmulti_1_main.cpp)
add_executable(_03_knapsackmulti_2_main _03_knapsackmulti_2/_03_knapsackmulti_2_main.cpp)
add_executable(_03_knapsackmulti_3_main _03_knapsackmulti_3/_03_knapsackmulti_3_main.cpp)
add_executable(_04_knapsackhybrid_main _04_knapsackhybrid/_04_knapsackhybrid_main.cpp)
add_executable(_05_knapsackhy2d_main _05_knapsackhy2d/_05_knapsackhy2d_main.cpp)
add_executable(_06_knapsackgroup_main _06_knapsackgroup/_06_knapsackgroup_main.cpp)
add_executable(_07_knapsacksolutionnum_main _07_knapsacksolutionnum/_07_knapsacksolutionnum_main.cpp)
add_executable(_08_knapsacksolution_main _08_knapsacksolution/_08_knapsacksolution_main.cpp)
add_executable(_09_knapsackdependency_main _09_knapsackdependency/_09_knapsackdependency_main.cpp)